# opengl_cpp

./: CMakeLists.txt  README.md
include/: globals.hpp  lab1.hpp  lab2.hpp  lab3.hpp  lab4.hpp  lab5.hpp  lab6.hpp
src/: lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  lab5.cpp  lab6.cpp  main.cpp
